# rag-chatbot

./: .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json  start.sh
backend/: README.md  state.py
backend/alembic/: env.py
backend/alembic/versions/: 2026_03_21_1411_040b0da03c42_init.py
backend/helpers/: prettier.py
backend/memory/vector_database/: chroma.py
backend/services/chat_service/: ctx_strategy.py
backend/services/ingest_documents_service/: document_registry.py
backend/services/ingest_documents_service/document_loader/: loader.py  text_splitter.py
frontend/: README.md  index.html
frontend/src/components/chat/: chat-header.tsx  chat-viewport.tsx
notes/technical/mcp/: README.md
scripts/: memory_builder.py
tests/api/: test_chat_stream.py
tests/bot/memory/: test_document_registry.py
