[project]
name = "chatbot"
version = "0.7.0"
description = "RAG ChatBot"
authors = [{ name = "Umberto Griffo", email = "1609440+umbertogriffo@users.noreply.github.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch",
    "torchvision",
    "sentence-transformers~=5.1.2",
    "peft~=0.18.1",
    "chromadb~=1.5.0",
    "grpcio==1.78.0",
    "rich~=13.4.2",
    "unstructured[md]~=0.20.2",
    "docling[vlm, rapidocr, easyocr]~=2.82.0",
    "transformers~=4.57.6",
    "numpy~=2.4.4",
    "requests~=2.33.0",
    "tqdm~=4.67.0",
    "clean-text~=0.7.1",
    "Unidecode~=1.3.6",
    "fastapi[standard]~=0.115.14",
    "uvicorn[standard]~=0.32.0",
    "pydantic-settings>=2.6.0,<3,<3.0.0",
    "python-multipart~=0.0.22",
    "sqlmodel~=0.0.37",
    "alembic>=1.18.4,<2,<2.0.0",
    "openai~=2.41.0",
]

[dependency-groups]
dev = [
    "pytest~=9.0.2",
    "pytest-cov~=7.0.0",
    "pytest-mock~=3.15.0",
    "pytest-asyncio~=1.3.0",
    "pre-commit~=3.6.0",
    "ruff~=0.14.10",
    "httpx~=0.28.1",
]

[tool.uv]
default-groups = "all"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch", marker = "sys_platform != 'darwin'" },
]
torchvision = [
    { index = "pytorch", marker = "sys_platform != 'darwin'" },
]

[tool.uv.build-backend]
module-name = ["chatbot"]
module-root = ""
namespace = true

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

# https://docs.astral.sh/ruff/configuration/
# https://docs.astral.sh/ruff/settings/#lint_isort_known-first-party
[tool.ruff]
exclude = [
    ".venv",
    ".ruff_cache",
    ".pytest_cache",
    "docs",
    "frontend",
    "backend/alembic/versions"
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# "I" is isort, C901 is McCabe complexity
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    "C901"
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 12.
max-complexity = 12

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "chatbot",
    "backend",
    "tests"
]
